--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "db:generate": "cd server && npx prisma generate",
     "db:migrate": "cd server && npx prisma migrate dev",
     "db:push": "cd server && npx prisma db push",
-    "db:seed": "cd server && npm run db:seed",
-    "render-build": "cd server && npm install && npx prisma generate && npm run build && cd ../client && npm install && npm run build"
+    "db:seed": "cd server && npm run db:seed"
   },
   "devDependencies": {
-    "@types/node": "^25.2.3",
     "concurrently": "^8.2.2"
   }
 }
